--- a/img.qrc
+++ b/img.qrc
@@ -1,11 +1,16 @@
 <RCC>
     <qresource prefix="/">
-        <file>img/bluetooth_icon.png</file>
-        <file>img/logo.jpg</file>
-        <file>img/bluetooth_enabled.png</file>
-        <file>img/bluetooth_connecting.png</file>
-        <file>img/bluetooth_disabled.png</file>
-        <file>img/plan.jpg</file>
-        <file>img/combobox_icon.png</file>
+        <file>assets/icons/bluetooth_connecting.png</file>
+        <file>assets/icons/bluetooth_disabled.png</file>
+        <file>assets/icons/bluetooth_enabled.png</file>
+        <file>assets/icons/bluetooth_icon.png</file>
+        <file>assets/icons/combobox_icon.png</file>
+        <file>assets/slayds/IMG_7508.JPG</file>
+        <file>assets/slayds/IMG_7512.JPG</file>
+        <file>assets/slayds/IMG_7519.JPG</file>
+        <file>assets/slayds/IMG_7522.JPG</file>
+        <file>assets/slayds/IMG_7525.JPG</file>
+        <file>assets/slayds/IMG_7529.JPG</file>
+        <file>assets/slayds/IMG_7534.JPG</file>
     </qresource>
 </RCC>
