--- a/img.qrc
+++ b/img.qrc
@@ -5,5 +5,6 @@
         <file>resources/icons/bluetooth_enabled.png</file>
         <file>resources/icons/bluetooth_icon.png</file>
         <file>resources/icons/combobox_icon.png</file>
+        <file>resources/icons/loading-gif.gif</file>
     </qresource>
 </RCC>
